--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "mo_ta": "",
   "dependencies": {
+    "@google/genai": "^1.26.0",
     "@mux/mux-node": "^12.7.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
